--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Servidor -- Servidor Web</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">JESUS OSVALDO MANRIQUEZ GONZALEZ</h5>
         </div>
         <div class="row center">
         </div>
